--- a/src/main/java/view/UsuarioView.form
+++ b/src/main/java/view/UsuarioView.form
@@ -26,7 +26,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="MVC - Cadastro de Usu&#xe1;rios"/>
+    <Property name="title" type="java.lang.String" value="Sales System - Cadastro de Usu&#xe1;rios"/>
     <Property name="focusable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
