--- a/src/main/java/view/FormaPagamentoView.form
+++ b/src/main/java/view/FormaPagamentoView.form
@@ -26,7 +26,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="Sales System - Cadastro de Usu&#xe1;rios"/>
+    <Property name="title" type="java.lang.String" value="Sales System - Cadastro de Formas de Pagamentos"/>
     <Property name="focusable" type="boolean" value="false"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
@@ -246,7 +246,7 @@
           <Font name="Tahoma" size="24" style="1"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="CADASTRO DE USU&#xc1;RIO"/>
+        <Property name="text" type="java.lang.String" value="CADASTRO DE FORMAS DE PAGAMENTOS"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -266,8 +266,8 @@
         <Container class="javax.swing.JPanel" name="jPanel1">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="Dados do Usu&#xe1;rio">
-                <Property name="tabTitle" type="java.lang.String" value="Dados do Usu&#xe1;rio"/>
+              <JTabbedPaneConstraints tabName="Dados da Forma de Pagamento">
+                <Property name="tabTitle" type="java.lang.String" value="Dados da Forma de Pagamento"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
@@ -278,26 +278,18 @@
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="lblUSU_ID" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblUSU_NOME" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblUSU_LOGIN" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblFPG_ID" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblFPG_NOME" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="edtUSU_LOGIN" min="-2" pref="260" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
-                              <Component id="lblUSU_SENHA" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="edtUSU_SENHA" min="-2" pref="160" max="-2" attributes="0"/>
-                          </Group>
-                          <Component id="edtUSU_CODIGO" min="-2" pref="86" max="-2" attributes="0"/>
-                          <Component id="edtUSU_NOME" alignment="0" min="-2" pref="481" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="edtFPG_CODIGO" min="-2" pref="86" max="-2" attributes="0"/>
+                          <Component id="edtFPG_NOME" alignment="0" min="-2" pref="481" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="lblUSU_ATIVO" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblFPG_ATIVO" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="comboUSU_ATIVO" min="-2" pref="99" max="-2" attributes="0"/>
+                      <Component id="comboFPG_ATIVO" min="-2" pref="99" max="-2" attributes="0"/>
                       <EmptySpace pref="248" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -307,30 +299,23 @@
                   <Group type="102" attributes="0">
                       <EmptySpace min="8" pref="8" max="8" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="edtUSU_CODIGO" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                          <Component id="lblUSU_ID" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="edtFPG_CODIGO" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="lblFPG_ID" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="edtUSU_NOME" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                          <Component id="lblUSU_NOME" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="comboUSU_ATIVO" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                          <Component id="lblUSU_ATIVO" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="edtFPG_NOME" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="lblFPG_NOME" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="comboFPG_ATIVO" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="lblFPG_ATIVO" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="lblUSU_LOGIN" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="edtUSU_LOGIN" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                          <Component id="lblUSU_SENHA" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="edtUSU_SENHA" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace pref="15" max="32767" attributes="0"/>
+                      <EmptySpace pref="46" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JLabel" name="lblUSU_ID">
+            <Component class="javax.swing.JLabel" name="lblFPG_ID">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="14" style="0"/>
@@ -338,7 +323,7 @@
                 <Property name="text" type="java.lang.String" value="C&#xf3;digo"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="lblUSU_NOME">
+            <Component class="javax.swing.JLabel" name="lblFPG_NOME">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="14" style="0"/>
@@ -346,15 +331,7 @@
                 <Property name="text" type="java.lang.String" value="Nome"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="lblUSU_LOGIN">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Tahoma" size="14" style="0"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="Login"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JTextField" name="edtUSU_CODIGO">
+            <Component class="javax.swing.JTextField" name="edtFPG_CODIGO">
               <Properties>
                 <Property name="editable" type="boolean" value="false"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -362,36 +339,14 @@
                 </Property>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="edtUSU_NOME">
+            <Component class="javax.swing.JTextField" name="edtFPG_NOME">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="14" style="0"/>
                 </Property>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="edtUSU_LOGIN">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Tahoma" size="14" style="0"/>
-                </Property>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JLabel" name="lblUSU_SENHA">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Tahoma" size="14" style="0"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="Senha"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JPasswordField" name="edtUSU_SENHA">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Tahoma" size="14" style="0"/>
-                </Property>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JComboBox" name="comboUSU_ATIVO">
+            <Component class="javax.swing.JComboBox" name="comboFPG_ATIVO">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="2">
@@ -404,7 +359,7 @@
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
             </Component>
-            <Component class="javax.swing.JLabel" name="lblUSU_ATIVO">
+            <Component class="javax.swing.JLabel" name="lblFPG_ATIVO">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="14" style="0"/>
@@ -486,15 +441,11 @@
                                   <Component id="lblCodigo2" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Component id="edtCONS_ID2" min="-2" pref="70" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="lblCONS_LOGIN" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Component id="edtCONS_LOGIN" min="-2" pref="427" max="-2" attributes="0"/>
                               </Group>
                               <Component id="edtCONS_NOME" min="-2" pref="650" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="btnConsulta" max="32767" attributes="0"/>
+                          <Component id="btnConsulta" pref="86" max="32767" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="btnLimpar" min="-2" pref="91" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
@@ -510,8 +461,6 @@
                               <Component id="edtCONS_ID1" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="lblCodigo2" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="edtCONS_ID2" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="edtCONS_LOGIN" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="lblCONS_LOGIN" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
@@ -593,21 +542,6 @@
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JTextField" name="edtCONS_NOME">
-                  <Properties>
-                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="Tahoma" size="12" style="0"/>
-                    </Property>
-                  </Properties>
-                </Component>
-                <Component class="javax.swing.JLabel" name="lblCONS_LOGIN">
-                  <Properties>
-                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="Tahoma" size="12" style="0"/>
-                    </Property>
-                    <Property name="text" type="java.lang.String" value="Login"/>
-                  </Properties>
-                </Component>
-                <Component class="javax.swing.JTextField" name="edtCONS_LOGIN">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Tahoma" size="12" style="0"/>
