--- a/src/main/java/view/FormaPagamentoView.form
+++ b/src/main/java/view/FormaPagamentoView.form
@@ -396,7 +396,7 @@
                       <EmptySpace min="10" pref="10" max="10" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jPanel3" max="32767" attributes="0"/>
-                          <Component id="jScrollPane2" pref="945" max="32767" attributes="0"/>
+                          <Component id="jScrollPane2" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -445,7 +445,7 @@
                               <Component id="edtCONS_NOME" min="-2" pref="650" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="btnConsulta" pref="86" max="32767" attributes="0"/>
+                          <Component id="btnConsulta" max="32767" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="btnLimpar" min="-2" pref="91" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
@@ -519,6 +519,9 @@
                 </Component>
                 <Component class="javax.swing.JButton" name="btnConsulta">
                   <Properties>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/imagens/iconePesquisa.png"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="Consulta"/>
                   </Properties>
                   <Events>
@@ -527,7 +530,7 @@
                 </Component>
                 <Component class="javax.swing.JButton" name="btnLimpar">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="Limpa"/>
+                    <Property name="text" type="java.lang.String" value="Limpar"/>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLimparActionPerformed"/>
