--- a/src/main/java/view/UsuarioView.form
+++ b/src/main/java/view/UsuarioView.form
@@ -441,7 +441,7 @@
                       <EmptySpace min="10" pref="10" max="10" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jPanel3" max="32767" attributes="0"/>
-                          <Component id="jScrollPane2" pref="945" max="32767" attributes="0"/>
+                          <Component id="jScrollPane2" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -570,6 +570,9 @@
                 </Component>
                 <Component class="javax.swing.JButton" name="btnConsulta">
                   <Properties>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/imagens/iconePesquisa.png"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="Consulta"/>
                   </Properties>
                   <Events>
@@ -578,7 +581,7 @@
                 </Component>
                 <Component class="javax.swing.JButton" name="btnLimpar">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="Limpa"/>
+                    <Property name="text" type="java.lang.String" value="Limpar"/>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLimparActionPerformed"/>
