--- a/src/main/java/view/FormaPagamentoView.form
+++ b/src/main/java/view/FormaPagamentoView.form
@@ -522,7 +522,7 @@
                     <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                       <Image iconType="3" name="/imagens/iconePesquisa.png"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Consulta"/>
+                    <Property name="text" type="java.lang.String" value="Buscar"/>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnConsultaActionPerformed"/>
